src/main/java/org/fancryer/gen/AvParser.java
// Generated from A:/Av/src/main/resources/0.2/AvParser.g4 by ANTLR 4.13.2
package org.fancryer.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AvParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Int=1, Float=2, Dot=3, True=4, False=5, Nil=6, HexInt=7, Overlay=8, Unite=9, 
		Default=10, Intersect=11, Differ=12, Either=13, Push=14, Id=15, Brace_Paren_Left=16, 
		Brace_Paren_Right=17, Brace_Square_Left=18, Brace_Square_Right=19, Brace_Curly_Left=20, 
		Brace_Curly_Right=21, Comma=22, Colon=23, Semicolon=24, BindTemporary=25, 
		BindPersistent=26, Quote=27, EscapeSequence=28, WS=29, Comment=30, DQUOTE=31, 
		TEXT=32, BACKSLASH_PAREN=33;
	public static final int
		RULE_chunk = 0, RULE_borrow = 1, RULE_exp = 2, RULE_atom = 3, RULE_list_entry = 4, 
		RULE_list = 5, RULE_list_entries = 6, RULE_map_entries = 7, RULE_map = 8, 
		RULE_map_entry = 9, RULE_plain_map_entry = 10, RULE_decl_entry = 11, RULE_bytes = 12, 
		RULE_int = 13, RULE_string = 14, RULE_string_content = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"chunk", "borrow", "exp", "atom", "list_entry", "list", "list_entries", 
			"map_entries", "map", "map_entry", "plain_map_entry", "decl_entry", "bytes", 
			"int", "string", "string_content"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'.'", "'true'", "'false'", null, null, null, null, 
			null, null, null, null, null, null, "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "','", "':'", "';'", "':='", "'::='", "'''", null, null, null, 
			null, null, "'\\('"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Int", "Float", "Dot", "True", "False", "Nil", "HexInt", "Overlay", 
			"Unite", "Default", "Intersect", "Differ", "Either", "Push", "Id", "Brace_Paren_Left", 
			"Brace_Paren_Right", "Brace_Square_Left", "Brace_Square_Right", "Brace_Curly_Left", 
			"Brace_Curly_Right", "Comma", "Colon", "Semicolon", "BindTemporary", 
			"BindPersistent", "Quote", "EscapeSequence", "WS", "Comment", "DQUOTE", 
			"TEXT", "BACKSLASH_PAREN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AvParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChunkContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AvParser.EOF, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Map_entriesContext map_entries() {
			return getRuleContext(Map_entriesContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitChunk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(32);
				exp(0);
				}
				break;
			case 2:
				{
				setState(33);
				map_entries();
				}
				break;
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BorrowContext extends ParserRuleContext {
		public TerminalNode Overlay() { return getToken(AvParser.Overlay, 0); }
		public TerminalNode Unite() { return getToken(AvParser.Unite, 0); }
		public TerminalNode Default() { return getToken(AvParser.Default, 0); }
		public TerminalNode Intersect() { return getToken(AvParser.Intersect, 0); }
		public TerminalNode Differ() { return getToken(AvParser.Differ, 0); }
		public TerminalNode Either() { return getToken(AvParser.Either, 0); }
		public TerminalNode Push() { return getToken(AvParser.Push, 0); }
		public BorrowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_borrow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterBorrow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitBorrow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitBorrow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BorrowContext borrow() throws RecognitionException {
		BorrowContext _localctx = new BorrowContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_borrow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 32512L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpContext extends ParserRuleContext {
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	 
		public ExpContext() { }
		public void copyFrom(ExpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Atom_expContext extends ExpContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Atom_expContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterAtom_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitAtom_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitAtom_exp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class List_expContext extends ExpContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public List_expContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterList_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitList_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitList_exp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Bytes_expContext extends ExpContext {
		public BytesContext bytes() {
			return getRuleContext(BytesContext.class,0);
		}
		public Bytes_expContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterBytes_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitBytes_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitBytes_exp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Ref_expContext extends ExpContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode Dot() { return getToken(AvParser.Dot, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Ref_expContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterRef_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitRef_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitRef_exp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Borrow_expContext extends ExpContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public BorrowContext borrow() {
			return getRuleContext(BorrowContext.class,0);
		}
		public Borrow_expContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterBorrow_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitBorrow_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitBorrow_exp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Var_expContext extends ExpContext {
		public TerminalNode Quote() { return getToken(AvParser.Quote, 0); }
		public TerminalNode Id() { return getToken(AvParser.Id, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public Var_expContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterVar_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitVar_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitVar_exp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Map_expContext extends ExpContext {
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public Map_expContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterMap_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitMap_exp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitMap_exp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Float:
			case True:
			case False:
			case Nil:
			case HexInt:
			case Id:
			case DQUOTE:
				{
				_localctx = new Atom_expContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(41);
				atom();
				}
				break;
			case Brace_Square_Left:
				{
				_localctx = new List_expContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(42);
				list();
				}
				break;
			case Brace_Curly_Left:
				{
				_localctx = new Map_expContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(43);
				map();
				}
				break;
			case Brace_Paren_Left:
				{
				_localctx = new Bytes_expContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(44);
				bytes();
				}
				break;
			case Quote:
				{
				_localctx = new Var_expContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(45);
				match(Quote);
				setState(48);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Id:
					{
					setState(46);
					match(Id);
					}
					break;
				case DQUOTE:
					{
					setState(47);
					string();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(59);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new Borrow_expContext(new ExpContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(52);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(53);
						borrow();
						setState(54);
						exp(2);
						}
						break;
					case 2:
						{
						_localctx = new Ref_expContext(new ExpContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(56);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(57);
						match(Dot);
						setState(58);
						atom();
						}
						break;
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomContext extends ParserRuleContext {
		public IntContext int_() {
			return getRuleContext(IntContext.class,0);
		}
		public TerminalNode Float() { return getToken(AvParser.Float, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode True() { return getToken(AvParser.True, 0); }
		public TerminalNode False() { return getToken(AvParser.False, 0); }
		public TerminalNode Nil() { return getToken(AvParser.Nil, 0); }
		public TerminalNode Id() { return getToken(AvParser.Id, 0); }
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atom);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case HexInt:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				int_();
				}
				break;
			case Float:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				match(Float);
				}
				break;
			case DQUOTE:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				string();
				}
				break;
			case True:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				match(True);
				}
				break;
			case False:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				match(False);
				}
				break;
			case Nil:
				enterOuterAlt(_localctx, 6);
				{
				setState(69);
				match(Nil);
				}
				break;
			case Id:
				enterOuterAlt(_localctx, 7);
				{
				setState(70);
				match(Id);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_entryContext extends ParserRuleContext {
		public Decl_entryContext decl_entry() {
			return getRuleContext(Decl_entryContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterList_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitList_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitList_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_entryContext list_entry() throws RecognitionException {
		List_entryContext _localctx = new List_entryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list_entry);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				decl_entry();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode Brace_Square_Left() { return getToken(AvParser.Brace_Square_Left, 0); }
		public TerminalNode Brace_Square_Right() { return getToken(AvParser.Brace_Square_Right, 0); }
		public List_entriesContext list_entries() {
			return getRuleContext(List_entriesContext.class,0);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(Brace_Square_Left);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2283110646L) != 0)) {
				{
				setState(78);
				list_entries();
				}
			}

			setState(81);
			match(Brace_Square_Right);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class List_entriesContext extends ParserRuleContext {
		public List<List_entryContext> list_entry() {
			return getRuleContexts(List_entryContext.class);
		}
		public List_entryContext list_entry(int i) {
			return getRuleContext(List_entryContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(AvParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AvParser.Comma, i);
		}
		public List_entriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_entries; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterList_entries(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitList_entries(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitList_entries(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_entriesContext list_entries() throws RecognitionException {
		List_entriesContext _localctx = new List_entriesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list_entries);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			list_entry();
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Comma) {
						{
						setState(84);
						match(Comma);
						}
					}

					setState(87);
					list_entry();
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(93);
				match(Comma);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Map_entriesContext extends ParserRuleContext {
		public List<Map_entryContext> map_entry() {
			return getRuleContexts(Map_entryContext.class);
		}
		public Map_entryContext map_entry(int i) {
			return getRuleContext(Map_entryContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(AvParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AvParser.Comma, i);
		}
		public Map_entriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map_entries; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterMap_entries(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitMap_entries(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitMap_entries(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Map_entriesContext map_entries() throws RecognitionException {
		Map_entriesContext _localctx = new Map_entriesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_map_entries);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			map_entry();
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Comma) {
						{
						setState(97);
						match(Comma);
						}
					}

					setState(100);
					map_entry();
					}
					} 
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(106);
				match(Comma);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MapContext extends ParserRuleContext {
		public TerminalNode Brace_Curly_Left() { return getToken(AvParser.Brace_Curly_Left, 0); }
		public TerminalNode Brace_Curly_Right() { return getToken(AvParser.Brace_Curly_Right, 0); }
		public Map_entriesContext map_entries() {
			return getRuleContext(Map_entriesContext.class,0);
		}
		public MapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).enterMap(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AvParserListener ) ((AvParserListener)listener).exitMap(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AvParserVisitor ) return ((AvParserVisitor<? extends T>)visitor).visitMap(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MapContext map() throws RecognitionException {
		MapContext _localctx = new MapContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_map);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(Brace_Curly_Left);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2147516662L) != 0)) {
				{
				setState(110);
				map_entries();
				}
			}

			setState(113);
			match(Brace_Curly_Right);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
